refactor(catalog): 커버·초상을 새 이름 한 곳에서만 읽고 쓴다 (#486)
cover_url · portrait_url 개명의 **2 단계**다. 1 단계(V20, #396)는 새 컬럼을 더하고
양쪽에 쓰게 했다 — 무중단 배포에서 구 버전과 신 버전이 겹쳐 돌기 때문이다.
그 배포가 지난 지금, 옛 컬럼을 향한 쓰기와 읽기를 걷는다.

- 발행이 새 컬럼에만 쓴다: story · story_version · character 세 자리
- 읽기의 COALESCE 를 없앤다: StoryCatalogFacade 네 자리 · StoryPublisher 네 자리
- catalog/V21 — 잔여 백필. V20 은 자기가 도는 순간에 있던 행만 옮겨 적었고,
  겹쳐 도는 창에서 구 버전이 만든 행은 그 뒤에 생겼다. COALESCE 가 그것을 가려
  주고 있었으므로, 걷기 전에 옮겨 적지 않으면 그 커버가 조용히 사라진다.

**옛 컬럼을 여기서 지우지 않는다.** 3 단계는 이 배포가 끝난 다음 배포다
(docs/deployment.md §2) — 합치면 겹쳐 도는 동안 구 버전의 쓰기가 전부 실패하고
되돌릴 자리도 없어진다.

한 컬럼이 두 종류(객체 키 · 공식 시드의 주소)를 나르는 문제는 그대로 둔다.
이 이슈는 이름이 가리키는 것을 하나로 만드는 데까지다 (§13-85).

Refs: #486

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_018kxtZKLGsZWuAN1dc5kG84